--- a/views/index.haml
+++ b/views/index.haml
@@ -7,4 +7,4 @@
 %input{ type: 'submit', value: 'Move', id: 'p2-play', name: 'p2-play' }
 %br
 %br
-=haml(:board, id: 'board', layout: false)
+=haml(:board, id: 'board', layout: false, locals: { control: control })
