refactored how the input is gathered to handle both web and terminal

--- a/views/index.haml
+++ b/views/index.haml
@@ -7,4 +7,5 @@
 %input{ type: 'submit', value: 'Move', id: 'p2-play', name: 'p2-play' }
 %br
 %br
+%h3= control.io_output
 =haml(:board, id: 'board', layout: false, locals: { control: control })
